# radiospectra

./: .codecov.yaml  .codespellrc  .coveragerc  .cruft.json  .editorconfig  .flake8  .gitignore  .isort.cfg  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  .travis.yml  .zenodo.json  145-fix-callisto.rst  CHANGELOG.rst  CITATION.cff  LICENSE  LICENSE.rst  MANIFEST.in  README.rst  RELEASE.md  appveyor.yml  azure-pipelines.yml  azure-templates.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  sub_package_update.yml
changelog/: 105.breaking.rst  105.trivial.rst  127.breaking.rst  129.feature.rst  138.feature.rst  140.feature.rst  141.bugfix.rst  141.feature.rst  142.bugfix.rst  142.deprecation.rst  144.bugfix.rst  145.bugfix.rst  148.feature.rst  150.doc.rst  151.bugfix.rst  154.doc.rst  158.feature.rst  161.trivial.rst  162.feature.rst  163.feature.rst  164.feature.rst  165.doc.rst  166.feature.rst  167.feature.rst  169.bugfix.rst  170.doc.rst  172.feature.rst  173.doc.rst  181.bugfix.rst  187.bugfix.rst  189.feature.rst  202.feature.rst  213.feature.rst  219.bugfix.rst  220.feature.rst  227.doc.rst  228.feature.rst  229.doc.rst  231.feature.rst  233.trivial.rst  (+18 more)
docs/: citation.rst  conf.py  dev_guide.rst  development.rst  guide.rst  index.rst  overview.rst  spectra.rst
docs/code_ref/: index.rst  mixins.rst  net.rst  radiospectra.rst  sources.rst  spectrogram.rst  spectrogram2.rst  spectrum.rst
docs/example/: lyra_ecallisto_quickstart_example.md
docs/sunpyspectra/: index.rst
docs/whatsnew/: changelog.rst  index.rst
examples/: README.txt  plot_waves.py
examples/plotting/: README.txt  plot_waves.py
radiospectra/: CHANGELOG.rst  __init__.py  exceptions.py  mixins.py  spectrogram.py  spectrum.py  util.py  utils.py  version.py
radiospectra/_dev/: __init__.py
radiospectra/data/: README.rst  __init__.py
radiospectra/data/test/: BIR_20110607_062400_10.fit  README.rst  __init__.py  ecallisto_resp_alt_format.html  eovsa_resp1.html  ilofar_resp2.html  rstn_learmonth.html  rstn_san-vito.html
radiospectra/net/: __init__.py  attrs.py
radiospectra/net/sources/: callisto.py  callisto_attrs.py  ecallisto.py  eovsa.py  ilofar.py  learmonth.py  nda.py  psp.py  rstn.py  stereo.py  wind.py
radiospectra/net/sources/tests/: test_callisto_client.py  test_ecallisto.py  test_ecallisto_client.py  test_eovsa.py  test_eovsa_client.py  test_ilofar.py  test_learmonth.py  test_nda_client.py  test_online.py  test_psp_client.py  test_rstn.py  test_rstn_client.py  test_stereo_client.py  test_wind_client.py
radiospectra/net/sources/tests/data/: eovsa_resp2.html  ilofar_resp1.html  learmonth_page.html  nda_page.html  resp1.html  resp2.html  rstn_holloman.html  rstn_learmonth.html  rstn_san-vito.html
radiospectra/sources/: __init__.py  callisto.py  swaves.py
radiospectra/spectrogram/: __init__.py  meta.py  sources.py  spectrogram.py  spectrogram_factory.py  spectrogrambase.py
radiospectra/spectrogram/sources/: __init__.py  callisto.py  eovsa.py  ilofar357.py  meta.py  nda.py  psp_rfs.py  rpw.py  rstn.py  swaves.py  waves.py
radiospectra/spectrogram/sources/tests/: test_callisto.py  test_eovsa.py  test_ilofar357.py  test_metadata_safety.py  test_nda.py  test_psp_rfs.py  test_rstn.py  test_solo_rpw.py  test_swaves.py  test_waves.py
radiospectra/spectrogram/tests/: conftest.py  test_callisto.py  test_eovsa.py  test_join_many.py  test_meta.py  test_online.py  test_psp_rfs.py  test_spectrogrambase.py  test_swaves.py
radiospectra/spectrogram2/: __init__.py  sources.py  spectrogram.py
radiospectra/spectrogram2/tests/: test_callisto.py  test_eovsa.py  test_ilofar.py  test_psp_rfs.py  test_rstn.py  test_swaves.py  test_waves.py
radiospectra/tests/: coveragerc  figure_hashes_mpl_3108_astropy_720.json  helpers.py  test_callisto.py  test_data.py  test_mixins.py  test_spectrogram.py  test_spectrum.py  test_util.py
sunpyspectra/: __init__.py  example_mod.py  spectrogram.py  spectrum.py
sunpyspectra/example_subpkg/: setup_package.py
sunpyspectra/sources/: callisto.py
sunpyspectra/tests/: coveragerc  test_callisto.py  test_spectrogram.py
