[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "radiospectra"
description = "Provide support for some type of radio spectra in solar physics."
requires-python = ">=3.12"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
]
dependencies = [
  "sunpy[net]>=6.0.0",
  "numpy>1.24",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "cdflib>=0.3.20"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-astropy",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
  "sunpy-soar",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "sphinx-changelog",
  "sphinx-gallery",
  "sunpy-sphinx-theme",
  "packaging",

]
dev = ["radiospectra[tests,docs]"]

[project.urls]
Homepage = "https://sunpy.org"
Download = "https://pypi.org/project/radiospectra"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["radiospectra*"]
exclude = ["radiospectra._dev*"]

[tool.setuptools_scm]
version_file = "radiospectra/_version.py"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
    | .history
  )/
)
'''

[tool.gilesbot]
  [tool.gilesbot.pull_requests]
  enabled = true

  [tool.gilesbot.towncrier_changelog]
  enabled = true
  verify_pr_number = true
  changelog_skip_label = "No Changelog Entry Needed"
  help_url = "https://github.com//blob/main/changelog/README.rst"
  changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com//blob/main/changelog/README.rst)."
  type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com//blob/main/changelog/README.rst)"
  number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
  package = "radiospectra"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} <https://github.com//pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true
