[metadata]
name = radiospectra
author = SunPy Developers
author_email = sunpy@googlegroups.com
license = BSD 2-Clause
license_file = LICENSE.rst
url = https://sunpy.org
description = Provide support for some type of radio spectra in solar physics
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
  sunpy
  bs4
  beautifulsoup4
  lxml


[options.extras_require]
test =
    pytest-doctestplus >= 0.5
    pytest
    pytest-astropy >= 0.8
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier
    sunpy-sphinx-theme


[options.package_data]
radiospectra = data/*

[tool:pytest]
testpaths = "radiospectra" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  radiospectra/_sunpy_init*
  radiospectra/conftest.py
  radiospectra/*setup_package*
  radiospectra/tests/*
  radiospectra/*/tests/*
  radiospectra/extern/*
  radiospectra/version*
  */radiospectra/_sunpy_init*
  */radiospectra/conftest.py
  */radiospectra/*setup_package*
  */radiospectra/tests/*
  */radiospectra/*/tests/*
  */radiospectra/extern/*
  */radiospectra/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
